# ecifr

./: README.md
reproduce_evaluation_data/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
reproduce_evaluation_data/data/: annotation.tsv  master_data.csv
reproduce_evaluation_data/scripts/: build_annotated_data.py  build_evaluation_data.py
reproduce_evaluation_data/src/: scraping.py  ssplit.py
reproduce_evaluation_data/src/first_party_modules/: ssplit.py
